Fixed work area